# holded-mcp

./: .gitignore  README.md  pyproject.toml
src/holded_mcp/: client.py  server.py
src/holded_mcp/tools/: accounting.py  contacts.py  crm.py  documents.py  products.py  projects.py  team.py  treasury.py
